--- a/css/main.css
+++ b/css/main.css
@@ -87,6 +87,227 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+/* ----- Base Header - Footer Styles ----*/
+
+header,
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+
+}
+
+header {
+
+}
+
+header .content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  
+
+}
+
+.header-divider {
+
+}
+
+header figure {
+
+}
+
+header nav{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
+
+}
+
+header nav ul {
+  display: flex;
+  justify-content: space-around;
+}
+
+footer .social-icons {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+}
+
+footer .social-icons p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+footer {
+
+}
+
+/* ------------------- Mobile Styles  - Homepage -----------*/
+
+
+/*** Hero Area ***/
+.hero-area {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+
+}
+
+.hero-area .content-wrapper {
+
+}
+
+/*** Aside ***/
+
+aside {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+
+}
+
+aside .content-wrapper {
+}
+
+.form-description {
+
+}
+
+.form {
+
+}
+
+/*** Features ***/
+
+.features {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+
+}
+
+.features .content-wrapper {
+
+}
+
+.features-items .features{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
+
+.fontawesome-icon {
+
+}
+
+.features-item-description {
+
+}
+
+/*** Reviews ***/
+
+.reviews {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+
+}
+
+.reviews .content-wrapper {
+
+}
+
+.previous-retreat-pic {
+
+}
+
+.retreat-description {
+
+}
+
+/*  =================================================
+    About Page
+    ================================================= */
+
+/*** Mission Section ***/
+
+.mission {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+
+}
+
+.mission .content-wrapper {
+
+}
+
+.mission-content {
+
+}
+
+/*** Map ***/
+
+.map figure {
+
+}
+
+/*** Contact Section ***/
+
+.contact-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+  
+
+}
+
+.contact-section .content-wrapper {
+  
+
+}
+
+.contact-content {
+
+}
+
+/*  =================================================
+    FAQ Page
+    ================================================= */
+
+  .faq {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+
+  }
+
+  .faq .content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
+
+  }
+
+  .faq-content {
+
+  }
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
