--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,7 @@ footer {
 }
 
 header {
+  padding: 15px 0;
 
 }
 
@@ -107,11 +108,15 @@ header .content-wrapper {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  
+  margin: 0;
+  width: 100%;
 
 }
 
 .header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
 
 }
 
@@ -124,12 +129,32 @@ header nav{
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
 
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 100%;
+}
+
+footer {
+  flex-direction: column;
+}
+
+footer p {
+  margin: 0px;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+
+}
+
+footer .contact {
+  margin-bottom: 50px;
 }
 
 footer .social-icons {
@@ -146,9 +171,13 @@ footer .social-icons p {
 
 }
 
-footer {
-
+footer .copyright {
+  margin: 20px 0;
 }
+
+
+
+
 
 /* ------------------- Mobile Styles  - Homepage -----------*/
 
@@ -195,6 +224,19 @@ aside .content-wrapper {
 
 }
 
+.features article {
+  width: 63%;
+  margin: 30px 0;
+}
+
+.features h2 {
+  margin-bottom: 60px;
+}
+
+.features p {
+  margin: 0;
+}
+
 .features .content-wrapper {
 
 }
@@ -222,9 +264,14 @@ aside .content-wrapper {
   flex-flow: row wrap;
 
 }
+ 
+.reviews h2 {
+  margin-bottom: 40px;
+}
 
-.reviews .content-wrapper {
-
+.reviews h3 {
+  width: 55%;
+  margin: 20px 0;
 }
 
 .previous-retreat-pic {
@@ -279,8 +326,8 @@ aside .content-wrapper {
 
 }
 
-.contact-content {
-
+.contact-content p {
+  margin: 0;
 }
 
 /*  =================================================
@@ -296,6 +343,7 @@ aside .content-wrapper {
   }
 
   .faq .content-wrapper {
+    margin: 50px 0 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -303,7 +351,12 @@ aside .content-wrapper {
 
   }
 
+  .faq h2 {
+    margin-bottom: 40px;
+  }
+
   .faq-content {
+    margin-bottom: 50px;
 
   }
 
