--- a/css/main.css
+++ b/css/main.css
@@ -267,6 +267,7 @@ aside .content-wrapper {
  
 .reviews h2 {
   margin-bottom: 40px;
+  
 }
 
 .reviews h3 {
@@ -449,15 +450,142 @@ aside .content-wrapper {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+  /*Tablet styles here*/
+
+  /*General styles*/
+.content-wrapper{
+  max-width: 640px;
+  margin: 100px 0px;
+}
+/*  =================================================
+    Homepage
+    ================================================= */
+
+/*Header styles */
+header{
+  justify-content: space-around;
+  padding: 33px 0;
+  
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+header .content-wrapper {
+  justify-content: space-between;
+  width: 100%;
+}
+
+.header-divider {
+  display: none;
+}
+
+header nav{
+  width: 20%;
+}
+
+header nav ul {
+  justify-content: space-between;
+}
+/*Hero area*/
+.hero-area h1{
+  
+}
+/*Aside*/
+aside .content-wrapper {
+  display: flex;
+  justify-content: space-between;
+  flex-flow: row wrap;
+  margin: 50px 0px;
+}
+
+aside .content-wrapper .form-description, aside .content-wrapper .form{
+  width: 45%;
+  margin: 0;
+}
+/*Features*/
+.features article {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+  flex-basis: 50%;
+}
+
+.features .features-item-description {
+  width: 50%;
+}
+/*Reviews*/
+.reviews article {
+  display: flex;
+  justify-content: space-between;
+}
+
+.reviews article div {
+  width: 50%;
+}
+/*Footer*/
+footer .content-wrapper{
+  width: 65%;
+  margin: 100px 0;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer .contact {
+  margin-bottom: 0;
+}
+
+footer .copyright {
+  width: 100%;
+}
+
+/*  =================================================
+    About Page
+    ================================================= */
+    .mission-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 20px;
+    }
+
+    .mission-content p {
+      width: 45%;
+    }
+
+    .contact-section .content-wrapper h2 {
+      width: 80%;
+    }
+
+    .contact-content {
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-start;
+    }
+/*  =================================================
+    FAQ Page
+    ================================================= */
+    .faq .content-wrapper {
+      justify-content: space-between;
+
+    }
+    
+    .faq-content {
+      flex-basis: 40%;
+
+    }
+
+    .faq h2 {
+      width: 100%;
+
+    }
+
+
+@media only screen and (min-width: 1200px) {
+  /*Desktop styles here*/
 }
 
 /* ==========================================================================
